tested to only build hugo

--- a/.github/workflows/feature.yml
+++ b/.github/workflows/feature.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Build                                
       run: hugo
 
-    - name: Test Files
-      uses: Cyb3r-Jak3/html5validator-action@v0.4
-      with:
-        root: public/
+#    - name: Test Files
+#      uses: Cyb3r-Jak3/html5validator-action@v0.4
+#      with:
+#        root: public/
