--- a/.github/workflows/feature.yml
+++ b/.github/workflows/feature.yml
@@ -26,8 +26,7 @@ jobs:
       with:
         root: public/
 
-    -name: Log file gen
-     uses: actions/upload-artifact@v1
+    -uses: actions/upload-artifact@v1
       with:
         name: log
         path: htmloutput.log
