--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -1,5 +1,7 @@
 backend:
-  name: git-gateway
+  name: github
+  repo: mastermndio/netlify-cms
+  open_authoring: true
   branch: master # Branch to update (optional; defaults to master)
 media_folder: static/img
 public_folder: /img
