--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -7,15 +7,26 @@ publish_mode: editorial_workflow
 media_folder: static/img
 public_folder: /img
 collections:
-  - name: 'blog'
-    label: 'Blog'
-    folder: 'content/blog'
+  - name: 'courses'
+    label: 'Courses'
+    folder: 'content/courses'
     create: true
     slug: '{{year}}-{{month}}-{{day}}-{{slug}}'
     editor:
       preview: false
     fields:
+      - { label: 'Category', name: 'course_category', widget: 'relation', collection: 'category' }
       - { label: 'Title', name: 'title', widget: 'string' }
-      - { label: 'Publish Date', name: 'date', widget: 'datetime' }
       - { label: 'Description', name: 'description', widget: 'string' }
-      - { label: 'Body', name: 'body', widget: 'markdown' }
+        # - name: 'blog'
+        #   label: 'Blog'
+        #   folder: 'content/blog'
+        #   create: true
+        #   slug: '{{year}}-{{month}}-{{day}}-{{slug}}'
+        #   editor:
+        #     preview: false
+        #   fields:
+        #     - { label: 'Title', name: 'title', widget: 'string' }
+        #     - { label: 'Publish Date', name: 'date', widget: 'datetime' }
+        #     - { label: 'Description', name: 'description', widget: 'string' }
+        #     - { label: 'Body', name: 'body', widget: 'markdown' }
