--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -25,7 +25,7 @@ collections:
     editor:
       preview: false
     fields:
-      - { label: 'Category', name: 'course_category', widget: 'relation', collection: 'category' }
+      - { label: 'Category', name: 'course_category', widget: 'relation', collection: 'category', searchFields: 'category.name', valueField: 'category.name'}
       - { label: 'Title', name: 'title', widget: 'string' }
       - { label: 'Description', name: 'description', widget: 'string' }
         # - name: 'blog'
