--- a/.github/workflows/feature.yml
+++ b/.github/workflows/feature.yml
@@ -19,7 +19,7 @@ jobs:
         hugo-version: '0.62.0'
 
     - name: Build                                
-      run: hugo
+      run: hugo server
 
 #    - name: Validate Html
 #      uses: Cyb3r-Jak3/html5validator-action@v0.4
