--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -25,9 +25,20 @@ collections:
     editor:
       preview: false
     fields:
-      - { label: 'Category', name: 'course_category', widget: 'relation', collection: 'category', searchFields: ['title', valueField: 'title']}
-      - { label: 'Title', name: 'title', widget: 'string' }
-      - { label: 'Description', name: 'description', widget: 'string' }
+      - label: 'Category'
+        name: 'course_category'
+        widget: 'relation'
+        collection: 'category'
+        searchFields: ['title']  
+        valueField: 'title'
+        
+      - label: 'Title'
+        name: 'title'
+        widget: 'string'
+
+      - label: 'Description'
+        name: 'description'
+        widget: 'string'
         # - name: 'blog'
         #   label: 'Blog'
         #   folder: 'content/blog'
